fixed food.html layout problems

--- a/dinnerplanner-html-master/styles/common-styles.css
+++ b/dinnerplanner-html-master/styles/common-styles.css
@@ -155,8 +155,7 @@
     float: right;
 }
 
-
-/* Toggle Styles */
+/* Navbar Styles */
 
 .navbar {
     margin-bottom: 0px !important;
@@ -230,6 +229,30 @@
     margin-right: auto;
 }
 
+
+/* Searchbar Styles */
+
+#plusGuest, #minusGuest {
+    background-color: white;
+    border-style: solid;
+    border-color: black;
+}
+
+#searchBar {
+    float: left;
+    margin-right: 10px;
+    margin-bottom: 30px;
+}
+
+#searchButton {
+    float: left;
+    margin-right: 10px;
+}
+
+.dropdown-toggle {
+    background-color: white;
+    color: black;
+}
 .filter-bar > * {
     margin-top: 20px;
 }
